# generic_vision

./: .gitignore  Cargo.toml  PROGRAM_1903.toml
src/: helpers.rs  main.rs  settings.rs
src/control/: candidate.rs  colorspaces.rs  mod.rs  model.rs  tools.rs
src/misc/: colorspaces.rs  helpers.rs  linear_algebra.rs  mod.rs  numerical_methods.rs
src/tests/: colorspaces_test.rs  mod.rs
