[package]
name = "generic_vision"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
anyhow = "1.0.58"
image = "0.24.5"
edge-detection = "0.2.6"
imageproc = "0.23.0"
uuid = {version = "1.2.2", features = ["v4"] }
image-compare = "0.2.4"
rgb = "0.8.34"